--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: superconnector-v2
     runtime: node
     buildCommand: npm install
-    startCommand: npm start
+    startCommand: npx convex deploy --typecheck=disable && node server.js
     envVars:
       - key: NODE_ENV
         value: production
