--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,9 @@ services:
     name: superconnector-v2
     runtime: node
     buildCommand: npm install
-    startCommand: npx convex deploy --typecheck=disable && node server.js
+    startCommand: node server-hotfix.js
     envVars:
       - key: NODE_ENV
         value: production
+      - key: WHATSAPP_VERIFY_TOKEN
+        value: verify_token_123456
