--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "superconnector-v2",
-  "version": "1.0.0",
+  "name": "superconnector-v5",
+  "version": "5.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server-hotfix.js",
-    "dev": "node server.js"
+    "start": "node server-v5.js",
+    "dev": "node server-v5.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.8",
     "axios": "^1.6.2",
-    "convex": "^1.25.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
